<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:id="@+id/container"
    tools:context=".ForecastFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/monday"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:src="@drawable/rain" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/tuesday"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:src="@drawable/snow" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/wednesday"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:src="@drawable/rain" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/thursday"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:src="@drawable/snow" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/friday"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:src="@drawable/rain" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/saturday"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:src="@drawable/snow" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/sunday"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:src="@drawable/rain" />
    </LinearLayout>

</LinearLayout>